# clirpg

./: BtTest.py  CMakeLists.txt  Gameplay.md  Project.todo  README.md
docs/: Objects.md  btree.drawio
include/game/potion/: BasePotion.hpp  DamagePotion.hpp  HealthPotion.hpp  Subject.hpp
lib/btree/: CMakeLists.txt
lib/btree/include/: Node.hpp  NodeSequence.hpp
lib/btree/src/: NodeSequence.cpp
src/: main.cpp
src/game/: Creature.cpp  Engine.cpp  HeroFate.cpp  Player.cpp  Potion.cpp
src/include/game/: Creature.hpp  Engine.hpp  Gainer.hpp  HeroFate.hpp  Input.hpp  Patient.hpp  Player.hpp  Potion.hpp
tests/: main.cpp
tests/game/: Creature.cpp  HeroFate.cpp  Player.cpp
